<resources>
    <string name="app_name">GearSwap</string>
    <string name="title_post_listing">Add Listing</string>
    <string name="title_profile">My Profile</string>
    <string name="home_feed">Home/Feed</string>
    <string name="post_listings">Post Listings</string>
    <string name="profile">Profile</string>
    <string name="account">Account</string>
    <string name="saved">Saved</string>
    <string name="transactions">Transactions</string>
    <string name="reviews">reviews</string>
    <string name="profile_picture">profile picture</string>

    <!--Home Screen / Listing Feed Text-->
    <string name="gear_title">Gear Title</string>
    <string name="gear_description">Short description of the gear…</string>
    <string name="price_format_with_currency">$ %2$.2f</string>
    <string name="gear_price_format">$%1$.2f per day</string>
    <string name="listing_item_image_description">Listing Item Image</string>
    <string name="item_price_string"> %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">Gear</string>
    <string name="gear_search_box_hint">Search gear</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_gear_item_detail">Gear Item Detail</string>
    <string name="gear_image">Gear Image</string>
    <string name="add_photo">Add Photo</string>
    <string name="submit">Submit\n</string>
    <string name="description">Add Description</string>
    <string name="price">Enter Price\n</string>
    <string name="title">Enter Title</string>
    <string name="Sports">Enter Sports</string>
    <string name="i_am_a_baseball_enthusiast_i_rent_out_bats_baseballs_gloves_and_sell_gear_from_mlb_minor_leagues_and_series_caribe_check_out_my_collection_of_baseball_cards">I am a baseball enthusiast. I rent out bats, baseballs, gloves and sell gear from MLB, minor leagues and Series Caribe. Check out my collection!</string>
    <string name="james_sportsman">James Sportsman</string>
    <string name="submit_review">Submit Review</string>
    <string name="back">Back</string>
    <string name="rent_now">Rent Now</string>

    <!--Login Text -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fragment_login">GearSwap Login</string>
    <string name="browse_as_guest_button">Browse as Guest</string>
    <string name="login_with_apple">login with apple</string>
    <string name="login_with_google">login with google</string>
    <string name="login_with_facebook">login with facebook</string>
</resources>