<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/loginFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.gearswap.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_listing"
        android:name="com.example.gearswap.ui.addListing.AddListingFragment"
        android:label="@string/title_post_listing"
        tools:layout="@layout/fragment_add_listing" />

    <fragment
        android:id="@+id/navigation_my_profile"
        android:name="com.example.gearswap.ui.myProfile.MyProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_my_profile" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.gearswap.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" />
</navigation>