<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.checkout.CheckoutFragment">

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:text="Checkout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_text"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/gear_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/listing_item_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder300"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/gear_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/gear_image"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:text="@string/gear_title"
                tools:text="Mountain Bike" />

            <TextView
                android:id="@+id/gear_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gear_title"
                android:layout_toEndOf="@id/gear_image"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/gear_description"
                tools:text="Excellent condition, perfect for trail rides." />

            <TextView
                android:id="@+id/gear_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/gear_description"
                android:layout_toEndOf="@id/gear_image"
                android:layout_marginStart="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/gear_price_format"
                tools:text="$15.00 per day" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="56dp"
        android:text="Pay Now"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>